--- a/cart.html
+++ b/cart.html
@@ -289,7 +289,7 @@
           setTimeout(() => {
             this.user = undefined;
             // 重新登录
-            window.location.href = "http://www.leyou.com/login.html?returnUrl=" + window.location.href;
+            window.location.href = "http://www.wl9939.top/login.html?returnUrl=" + window.location.href;
           }, 1700000);
         } catch {
         }
