--- a/copyright.html
+++ b/copyright.html
@@ -11,5 +11,5 @@
 	<li>友情链接<span class="space"></span></li>
 	<li>关于我们</li>
 </ul>
-<p>地址：上海市浦东新区航都路18号 邮编：201316 电话：400-618-9090  网址：http://www.itheima.com </p>
-<p>沪 ICP备xxxxxxxxxx号京公网安备xxxxxxxxxxx</p>
+<p>地址：江苏省苏州市工业园区文荟人才公寓 邮编：201316 电话：18296962695  网址：http://www.wl9939.top </p>
+<p>沪ICP备19004655 公安备案号11010502030143</p>
