--- a/home.html
+++ b/home.html
@@ -325,9 +325,9 @@
                 // 删除cookie中的token即可
                 Cookies.remove("LY_TOKEN",{
                     path:"/",
-                    domain:"leyou.com"
+                    domain:"wl9939.top"
                 });
-                window.location = 'http://www.leyou.com'
+                window.location = 'http://www.wl9939.top'
             },
             gotoLogin() {
                 window.location = "login.html?returnUrl=" + window.location;
