--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@
         leyou.http.post("/auth/user/login", leyou.stringify(this.form))
           .then(resp => {
             const url = leyou.getUrlParam("returnUrl");
-            window.location = url || 'http://www.leyou.com';
+            window.location = url || 'http://www.wl9939.top';
           })
           .catch(() => this.msg = '用户名或密码错误')
       }
