--- a/item.html
+++ b/item.html
@@ -728,7 +728,7 @@
           // 已登录
           ly.http.post("/trade/cart", cartItem).then(() => {
             // 跳转到购物车列表页
-            window.location.href = "http://www.leyou.com/cart.html";
+            window.location.href = "http://www.wl9939.top/cart.html";
           }).catch(() => {
             alert("添加购物车失败，请重试！");
           })
@@ -748,7 +748,7 @@
           // 未登录
           ly.store.set("carts", carts);
           // 跳转到购物车列表页
-          window.location.href = "http://www.leyou.com/cart.html";
+          window.location.href = "http://www.wl9939.top/cart.html";
         })
       },
     },
